configs/serving/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stardew-vision
  labels:
    app: stardew-vision
